--- a/.github/workflows/reusable-publishing.yml
+++ b/.github/workflows/reusable-publishing.yml
@@ -123,6 +123,11 @@ on:
         required: false
 
     outputs:
+      # Version output
+      version:
+        description: "Detected or provided package version"
+        value: ${{ jobs.detect-version.outputs.version }}
+
       # Repository config outputs
       npm-command:
         description: "Detected NPM publish command"
@@ -148,9 +153,25 @@ on:
         value: ${{ jobs.create-release.outputs.release-id }}
 
 jobs:
+  detect-version:
+    name: "🔍 Detect Version"
+    runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.extract.outputs.version }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Extract and validate version
+        id: extract
+        uses: CLDMV/.github/.github/actions/npm/steps/extract-version@v1
+        with:
+          package-name: ${{ inputs.package_name }}
+          version-override: ${{ inputs.version }}
+
   detect-repo-config:
     name: "🔧 Detect Repository Config"
-    if: inputs.run_detect_repo_config == true
+    if: inputs.run_detect_repo_config == true || inputs.run_publish_npm == true || inputs.run_publish_github_packages == true
     runs-on: ubuntu-latest
     outputs:
       npm-command: ${{ steps.detect.outputs.npm-command }}
@@ -170,18 +191,12 @@ jobs:
     name: "📦 Publish to NPM"
     if: inputs.run_publish_npm == true
     runs-on: ubuntu-latest
+    needs: [detect-version, detect-repo-config]
     outputs:
       published: ${{ steps.publish.outputs.published }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Extract and validate version
-        id: extract-version
-        uses: CLDMV/.github/.github/actions/npm/steps/extract-version@v1
-        with:
-          package-name: ${{ inputs.package_name }}
-          version-override: ${{ inputs.version }}
 
       - name: Calculate artifact names
         id: names
@@ -189,17 +204,17 @@ jobs:
         with:
           node-version: ${{ inputs.node_version }}
           package-name: ${{ inputs.package_name }}
-          version: ${{ steps.extract-version.outputs.version }}
+          version: ${{ needs.detect-version.outputs.version }}
 
       - name: Publish to NPM
         id: publish
         uses: CLDMV/.github/.github/actions/npm/jobs/publish-npm@v1
         with:
           package-name: ${{ inputs.package_name }}
-          version: ${{ steps.extract-version.outputs.version }}
+          version: ${{ needs.detect-version.outputs.version }}
           node-version: ${{ inputs.node_version }}
           package-manager: ${{ inputs.package_manager }}
-          publish-command: ${{ inputs.publish_command_npm }}
+          publish-command: ${{ needs.detect-repo-config.outputs.npm-command }}
           dry-run: ${{ inputs.dry_run }}
           npm-token: ${{ secrets.NPM_TOKEN }}
           artifact-name: ${{ steps.names.outputs.artifact-name }}
@@ -208,18 +223,12 @@ jobs:
     name: "📦 Publish to GitHub Packages"
     if: inputs.run_publish_github_packages == true
     runs-on: ubuntu-latest
+    needs: [detect-version, detect-repo-config]
     outputs:
       published: ${{ steps.publish.outputs.published }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Extract and validate version
-        id: extract-version
-        uses: CLDMV/.github/.github/actions/npm/steps/extract-version@v1
-        with:
-          package-name: ${{ inputs.package_name }}
-          version-override: ${{ inputs.version }}
 
       - name: Calculate artifact names
         id: names
@@ -227,17 +236,17 @@ jobs:
         with:
           node-version: ${{ inputs.node_version }}
           package-name: ${{ inputs.package_name }}
-          version: ${{ steps.extract-version.outputs.version }}
+          version: ${{ needs.detect-version.outputs.version }}
 
       - name: Publish to GitHub Packages
         id: publish
         uses: CLDMV/.github/.github/actions/npm/jobs/publish-github-packages@v1
         with:
           package-name: ${{ inputs.package_name }}
-          version: ${{ steps.extract-version.outputs.version }}
+          version: ${{ needs.detect-version.outputs.version }}
           node-version: ${{ inputs.node_version }}
           package-manager: ${{ inputs.package_manager }}
-          publish-command: ${{ inputs.publish_command_github_packages }}
+          publish-command: ${{ needs.detect-repo-config.outputs.github-packages-command }}
           dry-run: ${{ inputs.dry_run }}
           github-token: ${{ github.token }}
           artifact-name: ${{ steps.names.outputs.artifact-name }}
@@ -246,6 +255,7 @@ jobs:
     name: "⬇️ Download Build Artifacts"
     if: inputs.run_create_release == true && inputs.release_source_only == false
     runs-on: ubuntu-latest
+    needs: [detect-version]
     steps:
       - name: Calculate artifact names
         id: names
@@ -253,7 +263,7 @@ jobs:
         with:
           node-version: ${{ inputs.node_version }}
           package-name: ${{ inputs.package_name }}
-          version: ${{ inputs.version }}
+          version: ${{ needs.detect-version.outputs.version }}
 
       - name: Debug artifact name calculation
         shell: bash
@@ -272,7 +282,7 @@ jobs:
     name: "📋 Create GitHub Release"
     if: inputs.run_create_release == true && always() && (needs.publish-npm.result == 'success' || needs.publish-github-packages.result == 'success')
     runs-on: ubuntu-latest
-    needs: [publish-npm, publish-github-packages, download-artifacts]
+    needs: [detect-version, publish-npm, publish-github-packages, download-artifacts]
     outputs:
       release-id: ${{ steps.create.outputs.release-id }}
     steps:
@@ -290,7 +300,7 @@ jobs:
         id: create
         uses: CLDMV/.github/.github/actions/github/jobs/create-release@v1
         with:
-          version: ${{ inputs.version }}
+          version: ${{ needs.detect-version.outputs.version }}
           package-name: ${{ inputs.package_name }}
           is-prerelease: ${{ inputs.is_prerelease }}
           package-manager: ${{ inputs.package_manager }}
