refactor(action): set GH_TOKEN for GitHub CLI in orphaned releases action

--- a/.github/workflows/reusable-tag-health.yml
+++ b/.github/workflows/reusable-tag-health.yml
@@ -320,6 +320,7 @@ jobs:
         uses: CLDMV/.github/.github/actions/github/steps/fix-orphaned-releases@v1
         env:
           GITHUB_TOKEN: ${{ needs.setup-shared.outputs.auth-token }}
+          GH_TOKEN: ${{ needs.setup-shared.outputs.auth-token }}
           CI_DEBUG: ${{ inputs.debug && 'true' || 'false' }}
         with:
           debug: ${{ inputs.debug }}
