refactor(action): enhance GitHub API integration for tag creation

--- a/.github/workflows/reusable-tag-health.yml
+++ b/.github/workflows/reusable-tag-health.yml
@@ -306,6 +306,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      actions: write
     outputs:
       fixed_count: ${{ steps.fix-orphaned-releases.outputs.fixed-count }}
       summary-json: ${{ steps.fix-orphaned-releases.outputs.summary-json }}
