--- a/.github/workflows/test-tag-creation.yml
+++ b/.github/workflows/test-tag-creation.yml
@@ -55,6 +55,24 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Debug secrets availability
+        run: |
+          echo "App ID length: ${#CLDMV_APP_ID}"
+          echo "Private key length: ${#CLDMV_APP_PRIVATE_KEY}"
+          if [ -z "$CLDMV_APP_ID" ]; then
+            echo "❌ CLDMV_APP_ID is empty"
+          else
+            echo "✅ CLDMV_APP_ID is available"
+          fi
+          if [ -z "$CLDMV_APP_PRIVATE_KEY" ]; then
+            echo "❌ CLDMV_APP_PRIVATE_KEY is empty"
+          else
+            echo "✅ CLDMV_APP_PRIVATE_KEY is available"
+          fi
+        env:
+          CLDMV_APP_ID: ${{ secrets.CLDMV_APP_ID }}
+          CLDMV_APP_PRIVATE_KEY: ${{ secrets.CLDMV_APP_PRIVATE_KEY }}
+
       - name: Get CLDMV app token (no permissions)
         id: app-token
         uses: actions/create-github-app-token@v2
