--- a/.github/workflows/test-tag-creation.yml
+++ b/.github/workflows/test-tag-creation.yml
@@ -22,10 +22,10 @@ on:
         type: boolean
         default: true
     secrets:
-      CLDMV_APP_ID:
+      CLDMV_BOT_APP_ID:
         description: "GitHub App ID for creating app tokens"
         required: true
-      CLDMV_APP_PRIVATE_KEY:
+      CLDMV_BOT_APP_PRIVATE_KEY:
         description: "GitHub App private key for creating app tokens"
         required: true
       CLDMV_BOT_NAME:
@@ -33,6 +33,12 @@ on:
         required: false
       CLDMV_BOT_EMAIL:
         description: "Bot email for git operations (optional, defaults to app-slug based email)"
+        required: false
+      CLDMV_BOT_GPG_PRIVATE_KEY:
+        description: "GPG private key for signing (optional)"
+        required: false
+      CLDMV_BOT_GPG_PASSPHRASE:
+        description: "GPG passphrase for signing (optional)"
         required: false
       CLDMV_GPG_PRIVATE_KEY:
         description: "GPG private key for signing tags (optional)"
@@ -56,35 +62,26 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Debug - Check if App ID secret is available
-        id: check-secret
         run: |
-          if [ -n "$CLDMV_APP_ID" ] && [ "$CLDMV_APP_ID" != "" ]; then
-            echo "✅ CLDMV_APP_ID secret is available (length: ${#CLDMV_APP_ID})"
-            echo "secret_available=true" >> $GITHUB_OUTPUT
+          if [ -n "$CLDMV_BOT_APP_ID" ] && [ "$CLDMV_BOT_APP_ID" != "" ]; then
+            echo "✅ CLDMV_BOT_APP_ID secret is available (length: ${#CLDMV_BOT_APP_ID})"
           else
-            echo "❌ CLDMV_APP_ID secret is empty or not available"
-            echo "secret_available=false" >> $GITHUB_OUTPUT
-            echo "CLDMV_APP_ID value: '$CLDMV_APP_ID'"
+            echo "❌ CLDMV_BOT_APP_ID secret is empty or not available"
+            echo "CLDMV_BOT_APP_ID value: '$CLDMV_BOT_APP_ID'"
+            echo "❌ This will cause the app token creation to fail with 'appId option is required'"
+            exit 1
           fi
         env:
-          CLDMV_APP_ID: ${{ secrets.CLDMV_APP_ID }}
+          CLDMV_BOT_APP_ID: ${{ secrets.CLDMV_BOT_APP_ID }}
 
       - name: Get CLDMV app token (no permissions)
         id: app-token
-        if: ${{ steps.check-secret.outputs.secret_available == 'true' }}
         uses: actions/create-github-app-token@v2
         with:
-          app-id: ${{ secrets.CLDMV_APP_ID }}
-          private-key: ${{ secrets.CLDMV_APP_PRIVATE_KEY }}
+          app-id: ${{ secrets.CLDMV_BOT_APP_ID }}
+          private-key: ${{ secrets.CLDMV_BOT_APP_PRIVATE_KEY }}
           owner: ${{ github.repository_owner }}
           # No permission-* specified = minimal permissions
-
-      - name: Fallback to GITHUB_TOKEN if app secret not available
-        id: fallback-token
-        if: ${{ steps.check-secret.outputs.secret_available == 'false' }}
-        run: |
-          echo "Using GITHUB_TOKEN as fallback"
-          echo "token=${{ github.token }}" >> $GITHUB_OUTPUT
 
       - name: Get user ID for bot email
         id: get-user-id
@@ -92,7 +89,7 @@ jobs:
           user_id=$(gh api user --jq '.id')
           echo "user-id=$user_id" >> $GITHUB_OUTPUT
         env:
-          GH_TOKEN: ${{ steps.app-token.outputs.token || steps.fallback-token.outputs.token }}
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
 
       - name: Test tag creation
         id: test-tags
@@ -101,12 +98,12 @@ jobs:
           test_tag_name: "a00-${{ inputs.test_tag_name }}"
           target_commit: ${{ inputs.target_commit }}
           cleanup_tag: ${{ inputs.cleanup_tag }}
-          use_github_token: ${{ steps.check-secret.outputs.secret_available == 'false' && 'true' || 'false' }}
-          token: ${{ steps.app-token.outputs.token || steps.fallback-token.outputs.token }}
+          use_github_token: "false"
+          token: ${{ steps.app-token.outputs.token }}
           tagger_name: ${{ steps.app-token.outputs.app-slug && format('{0}[bot]', steps.app-token.outputs.app-slug) || secrets.CLDMV_BOT_NAME }}
           tagger_email: ${{ steps.app-token.outputs.app-slug && format('{0}+{1}[bot]@users.noreply.github.com', steps.get-user-id.outputs.user-id, steps.app-token.outputs.app-slug) || secrets.CLDMV_BOT_EMAIL }}
-          gpg_private_key: ${{ secrets.CLDMV_GPG_PRIVATE_KEY }}
-          gpg_passphrase: ${{ secrets.CLDMV_GPG_PASSPHRASE }}
+          gpg_private_key: ${{ secrets.CLDMV_BOT_GPG_PRIVATE_KEY }}
+          gpg_passphrase: ${{ secrets.CLDMV_BOT_GPG_PASSPHRASE }}
 
   # Matrix Test 2: App Token + App Permissions + No YAML Permissions
   test-app-with-app-perms-no-yaml-perms:
@@ -127,8 +124,8 @@ jobs:
         id: app-token
         uses: actions/create-github-app-token@v2
         with:
-          app-id: ${{ secrets.CLDMV_APP_ID }}
-          private-key: ${{ secrets.CLDMV_APP_PRIVATE_KEY }}
+          app-id: ${{ secrets.CLDMV_BOT_APP_ID }}
+          private-key: ${{ secrets.CLDMV_BOT_APP_PRIVATE_KEY }}
           owner: ${{ github.repository_owner }}
           permission-contents: write
           permission-metadata: read
@@ -154,8 +151,8 @@ jobs:
           token: ${{ steps.app-token.outputs.token }}
           tagger_name: ${{ steps.app-token.outputs.app-slug && format('{0}[bot]', steps.app-token.outputs.app-slug) || secrets.CLDMV_BOT_NAME }}
           tagger_email: ${{ steps.app-token.outputs.app-slug && format('{0}+{1}[bot]@users.noreply.github.com', steps.get-user-id.outputs.user-id, steps.app-token.outputs.app-slug) || secrets.CLDMV_BOT_EMAIL }}
-          gpg_private_key: ${{ secrets.CLDMV_GPG_PRIVATE_KEY }}
-          gpg_passphrase: ${{ secrets.CLDMV_GPG_PASSPHRASE }}
+          gpg_private_key: ${{ secrets.CLDMV_BOT_GPG_PRIVATE_KEY }}
+          gpg_passphrase: ${{ secrets.CLDMV_BOT_GPG_PASSPHRASE }}
 
   # Matrix Test 3: App Token + No App Permissions + YAML Permissions
   test-app-no-app-perms-with-yaml-perms:
@@ -178,8 +175,8 @@ jobs:
         id: app-token
         uses: actions/create-github-app-token@v2
         with:
-          app-id: ${{ secrets.CLDMV_APP_ID }}
-          private-key: ${{ secrets.CLDMV_APP_PRIVATE_KEY }}
+          app-id: ${{ secrets.CLDMV_BOT_APP_ID }}
+          private-key: ${{ secrets.CLDMV_BOT_APP_PRIVATE_KEY }}
           owner: ${{ github.repository_owner }}
           # No permission-* specified = minimal permissions
 
@@ -202,8 +199,8 @@ jobs:
           token: ${{ steps.app-token.outputs.token }}
           tagger_name: ${{ steps.app-token.outputs.app-slug && format('{0}[bot]', steps.app-token.outputs.app-slug) || secrets.CLDMV_BOT_NAME }}
           tagger_email: ${{ steps.app-token.outputs.app-slug && format('{0}+{1}[bot]@users.noreply.github.com', steps.get-user-id.outputs.user-id, steps.app-token.outputs.app-slug) || secrets.CLDMV_BOT_EMAIL }}
-          gpg_private_key: ${{ secrets.CLDMV_GPG_PRIVATE_KEY }}
-          gpg_passphrase: ${{ secrets.CLDMV_GPG_PASSPHRASE }}
+          gpg_private_key: ${{ secrets.CLDMV_BOT_GPG_PRIVATE_KEY }}
+          gpg_passphrase: ${{ secrets.CLDMV_BOT_GPG_PASSPHRASE }}
 
   # Matrix Test 4: App Token + App Permissions + YAML Permissions
   test-app-with-app-perms-with-yaml-perms:
@@ -226,8 +223,8 @@ jobs:
         id: app-token
         uses: actions/create-github-app-token@v2
         with:
-          app-id: ${{ secrets.CLDMV_APP_ID }}
-          private-key: ${{ secrets.CLDMV_APP_PRIVATE_KEY }}
+          app-id: ${{ secrets.CLDMV_BOT_APP_ID }}
+          private-key: ${{ secrets.CLDMV_BOT_APP_PRIVATE_KEY }}
           owner: ${{ github.repository_owner }}
           permission-contents: write
           permission-metadata: read
@@ -253,8 +250,8 @@ jobs:
           token: ${{ steps.app-token.outputs.token }}
           tagger_name: ${{ steps.app-token.outputs.app-slug && format('{0}[bot]', steps.app-token.outputs.app-slug) || secrets.CLDMV_BOT_NAME }}
           tagger_email: ${{ steps.app-token.outputs.app-slug && format('{0}+{1}[bot]@users.noreply.github.com', steps.get-user-id.outputs.user-id, steps.app-token.outputs.app-slug) || secrets.CLDMV_BOT_EMAIL }}
-          gpg_private_key: ${{ secrets.CLDMV_GPG_PRIVATE_KEY }}
-          gpg_passphrase: ${{ secrets.CLDMV_GPG_PASSPHRASE }}
+          gpg_private_key: ${{ secrets.CLDMV_BOT_GPG_PRIVATE_KEY }}
+          gpg_passphrase: ${{ secrets.CLDMV_BOT_GPG_PASSPHRASE }}
 
   # Matrix Test 5: GITHUB_TOKEN + No YAML Permissions
   test-github-token-no-yaml-perms:
