--- a/.github/workflows/debug-tag-creation.yml
+++ b/.github/workflows/debug-tag-creation.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
     inputs:
       test_tag_name:
-        description: "Base tag name for testing - will be prefixed with scenario codes (e.g., test-v1.0.0 becomes a00-test-v1.0.0, a10-test-v1.0.0, etc.)"
+        description: "Tag name to create for testing (e.g., test-v1.0.0)"
         required: true
         default: "test-debug-v1.0.0"
       target_commit:
@@ -32,16 +32,16 @@ jobs:
       cleanup_tag: ${{ inputs.cleanup_tag }}
     secrets:
       # REQUIRED: GitHub App and GPG credentials for your organization
-      CLDMV_APP_ID: ${{ secrets.CLDMV_APP_ID }}
-      CLDMV_APP_PRIVATE_KEY: ${{ secrets.CLDMV_APP_PRIVATE_KEY }}
+      CLDMV_BOT_APP_ID: ${{ secrets.CLDMV_BOT_APP_ID }}
+      CLDMV_BOT_APP_PRIVATE_KEY: ${{ secrets.CLDMV_BOT_APP_PRIVATE_KEY }}
 
       # OPTIONAL: Fallback bot identity (defaults to app-slug based identity)
       CLDMV_BOT_NAME: ${{ secrets.CLDMV_BOT_NAME }}
       CLDMV_BOT_EMAIL: ${{ secrets.CLDMV_BOT_EMAIL }}
 
       # OPTIONAL: GPG signing (recommended for production)
-      CLDMV_GPG_PRIVATE_KEY: ${{ secrets.CLDMV_GPG_PRIVATE_KEY }}
-      CLDMV_GPG_PASSPHRASE: ${{ secrets.CLDMV_GPG_PASSPHRASE }}
+      CLDMV_BOT_GPG_PRIVATE_KEY: ${{ secrets.CLDMV_BOT_GPG_PRIVATE_KEY }}
+      CLDMV_BOT_GPG_PASSPHRASE: ${{ secrets.CLDMV_BOT_GPG_PASSPHRASE }}
 # This workflow will automatically run all 6 test scenarios to help you identify:
 #
 # 1. **App Token vs GITHUB_TOKEN differences**
